--- a/doc/latex/gnutls.tex
+++ b/doc/latex/gnutls.tex
@@ -1,17 +1,21 @@
-\documentclass{book}
+\documentclass[letterpaper,10pt]{book}
 \bibliographystyle{plain}
 
-\usepackage{html}
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{makeidx}
 \usepackage{supertabular}
 \usepackage{color}
-\usepackage{colortbl}
 \usepackage{fancyvrb}
 \usepackage{eurosans}
 \usepackage{parskip}
 \usepackage{hyperref}
+\usepackage{framed}
+\usepackage{verbatim}
+\usepackage{listings}
+\usepackage{xcolor}
+\usepackage[greek,english]{babel}%for euro sign
+
 
 \hypersetup{
     colorlinks,%
